sonarr/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
        name: sonarr
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: server-type
                operator: In
                values:
                - nuc
      containers:
      - name: sonarr
        image: linuxserver/sonarr
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
          limits:
            cpu: 1000m
            memory: 600Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8989
          initialDelaySeconds: 15
          periodSeconds: 120
        volumeMounts:
        - name: sonarr-config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: longhorn-sonarr-config-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: longhorn-media-downloads-pvc
      automountServiceAccountToken: false
